# ampere-utils

./: .gitignore  LICENCE  README.md  pyproject.toml  setup.py
ampere_utils/: __init__.py  fft.py  plot.py  read.py
ampere_utils/notebooks/: example.ipynb
src/ampere_utils/: __init__.py  fft.py  plot.py  read.py
