[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ampere_utils"
authors = [
    {name = "John Coxon", email = "work@johncoxon.co.uk"},
]
description = "Useful AMPERE utilities."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["one", "two"]
license = {text = "GNU GPLv3"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib",
    "numpy"
]
dynamic = ["version"]

#[project.optional-dependencies]
#pdf = ["ReportLab>=1.2", "RXP"]
#rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]
#
#[project.scripts]
#my-script = "my_package.module:function"

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
